tket-hseries/src/llvm/snapshots/tket_hseries__llvm__qsystem__test__emit_qsystem_codegen@pre-mem2reg@llvm14_9.snap
---
source: tket-hseries/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i64, { i1, i64, i1 } } @_hl.main.1(i64 %0) {
alloca_block:
  %"0" = alloca i64, align 8
  %"1" = alloca { i1, i64, i1 }, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  %"4_1" = alloca { i1, i64, i1 }, align 8
  %"6_0" = alloca i64, align 8
  %"8_0" = alloca i64, align 8
  %"8_1" = alloca i64, align 8
  %"9_0" = alloca { i1, i64, i1 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, i64* %"2_0", align 4
  %"2_01" = load i64, i64* %"2_0", align 4
  store i64 %"2_01", i64* %"6_0", align 4
  %"6_02" = load i64, i64* %"6_0", align 4
  %lazy_measure = call i64 @___lazy_measure(i64 %"6_02")
  call void @___reset(i64 %"6_02")
  store i64 %"6_02", i64* %"8_0", align 4
  store i64 %lazy_measure, i64* %"8_1", align 4
  %"8_13" = load i64, i64* %"8_1", align 4
  %1 = insertvalue { i1, i64, i1 } { i1 true, i64 poison, i1 poison }, i64 %"8_13", 1
  store { i1, i64, i1 } %1, { i1, i64, i1 }* %"9_0", align 4
  %"8_04" = load i64, i64* %"8_0", align 4
  %"9_05" = load { i1, i64, i1 }, { i1, i64, i1 }* %"9_0", align 4
  store i64 %"8_04", i64* %"4_0", align 4
  store { i1, i64, i1 } %"9_05", { i1, i64, i1 }* %"4_1", align 4
  %"4_06" = load i64, i64* %"4_0", align 4
  %"4_17" = load { i1, i64, i1 }, { i1, i64, i1 }* %"4_1", align 4
  store i64 %"4_06", i64* %"0", align 4
  store { i1, i64, i1 } %"4_17", { i1, i64, i1 }* %"1", align 4
  %"08" = load i64, i64* %"0", align 4
  %"19" = load { i1, i64, i1 }, { i1, i64, i1 }* %"1", align 4
  %mrv = insertvalue { i64, { i1, i64, i1 } } undef, i64 %"08", 0
  %mrv10 = insertvalue { i64, { i1, i64, i1 } } %mrv, { i1, i64, i1 } %"19", 1
  ret { i64, { i1, i64, i1 } } %mrv10
}

declare i64 @___lazy_measure(i64)

declare void @___reset(i64)
